--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
     "@ionic/angular": "^5.5.2",
-    "rxjs": "~6.6.0",
+    "date-fns": "^2.22.1",
+    "rxjs": "^7.2.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
