--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/haptics": "1.0.2",
     "@capacitor/keyboard": "1.0.2",
     "@capacitor/status-bar": "1.0.2",
+    "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.5.2",
     "date-fns": "^2.22.1",
     "rxjs": "^7.2.0",
