--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.5.2",
     "date-fns": "^2.22.1",
-    "rxjs": "^7.2.0",
+    "rxjs": "7.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
